# mikve_project

./: contex.html
gate-system/: .env  .env.edge  .env.example  README.md  docker-compose.yml
gate-system/apps/dashboard/: .env  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
gate-system/apps/dashboard/src/: App.tsx  index.css  main.tsx
gate-system/deploy/: .env.edge.example  docker-compose.edge.yml  docker-compose.pi.yml  docker-compose.server.yml  docker-daemon.dns.example.json
gate-system/deploy/nginx/: nginx.conf  nginx.edge.conf.template  nginx.server.conf.template
gate-system/deploy/postgres/: init.sql
gate-system/deploy/scripts/: build-dns-check.sh
gate-system/diagrams/: README.md  architecture.mmd  sequence-access.mmd
gate-system/services/access-control-service/: .env  .env.example  Dockerfile  requirements.txt
gate-system/services/access-control-service/app/: access_logic.py  clients.py  dev_helpers.py  hardware_consumer.py  main.py  management.py  models.py  realtime.py  schemas.py  settings.py
gate-system/services/chip-service/: .env  Dockerfile  requirements.txt
gate-system/services/chip-service/app/: db.py  main.py  models.py  schemas.py  settings.py
gate-system/services/hardware-service/: .env  .env.example  Dockerfile  requirements.txt
gate-system/services/payment-service/: .env.example  Dockerfile  requirements.txt
gate-system/shared/py/: pyproject.toml
gate-system/shared/py/gate_shared/: __init__.py  errors.py  logging.py  settings.py
(+84 files in other folders)
