[project]
name = "gate-shared"
version = "0.1.0"
description = "Shared utilities and schemas for gate-system services"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

